[gd_scene load_steps=15 format=3 uid="uid://cgy55kt1iudgb"]

[ext_resource type="Script" path="res://Scripts/survivor.gd" id="1_mi1p3"]
[ext_resource type="Script" path="res://Scripts/State_Machine/State_Machine.gd" id="2_b12g2"]
[ext_resource type="Script" path="res://Scripts/survivor_coll.gd" id="2_ronuj"]
[ext_resource type="Script" path="res://Scripts/State_Machine/survivor_Attack_State.gd" id="3_v6isq"]
[ext_resource type="Script" path="res://Scripts/State_Machine/survivor_Idle_State.gd" id="5_7hdcf"]
[ext_resource type="Script" path="res://Scripts/State_Machine/survivor_Gather_State.gd" id="6_5kb7l"]
[ext_resource type="ArrayMesh" uid="uid://ci5h362e78583" path="res://Assets/models/Gestapo/Package/Gestapo-1.obj" id="7_dcwgw"]
[ext_resource type="PackedScene" uid="uid://cdr1y1mtmnxug" path="res://Assets/models/Gestapo/Character_Hero.fbx" id="8_yd8st"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1bmv6"]
albedo_color = Color(0.729412, 0.858824, 0.254902, 1)

[sub_resource type="BoxMesh" id="BoxMesh_8dyn4"]
size = Vector3(0.3, 0.4, 0.3)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ngv3g"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_07tca"]
albedo_color = Color(0.631373, 0.376471, 0.360784, 1)

[sub_resource type="SphereMesh" id="SphereMesh_bfudi"]
radius = 0.095
height = 0.18

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5dxfp"]
albedo_color = Color(0.0745098, 0.137255, 0.592157, 1)

[node name="Survivor" type="CharacterBody3D"]
script = ExtResource("1_mi1p3")

[node name="Selected_Indicator" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.22791, 0, 1.27987, 0, 1.3, 0, -1.27987, 0, -0.22791, -0.0982248, 4.33847, 0.27894)
visible = false
material_override = SubResource("StandardMaterial3D_1bmv6")
mesh = SubResource("BoxMesh_8dyn4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-0.22791, 0, 1.27987, 0, 1.3, 0, -1.27987, 0, -0.22791, -0.0982248, 1.24277, 0.27894)
shape = SubResource("CapsuleShape3D_ngv3g")
script = ExtResource("2_ronuj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Survivor_Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "script_user")]
script = ExtResource("2_b12g2")
initial_state = NodePath("Survivor_Idle_State")
script_user = NodePath("..")

[node name="Survivor_Attack_State" type="Node" parent="Survivor_Machine"]
script = ExtResource("3_v6isq")

[node name="Survivor_Idle_State" type="Node" parent="Survivor_Machine"]
script = ExtResource("5_7hdcf")

[node name="Survivor_Gather_State" type="Node" parent="Survivor_Machine"]
script = ExtResource("6_5kb7l")

[node name="GunShot" type="MeshInstance3D" parent="."]
transform = Transform3D(1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, 0.546788, 1.46173, -0.330974)
visible = false
material_override = SubResource("StandardMaterial3D_07tca")
mesh = SubResource("SphereMesh_bfudi")

[node name="Gestapo-1" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 0.75, 0, 8.74228e-08, 0, -1, -1.24095, 0.0832635, 0.0420097)
visible = false
mesh = ExtResource("7_dcwgw")

[node name="Character_Hero" parent="." instance=ExtResource("8_yd8st")]
transform = Transform3D(0.0151491, 0, 1.99994, 0, 2, 0, -1.99994, 0, 0.0151491, -0.106793, 0, 0.373857)

[node name="Gather_Indicator" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.22791, 0, 1.27987, 0, 1.3, 0, -1.27987, 0, -0.22791, -0.0982248, 4.33847, 0.27894)
visible = false
material_override = SubResource("StandardMaterial3D_5dxfp")
mesh = SubResource("BoxMesh_8dyn4")
